--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@
 
 .bejir {
   position: relative;
-  height: 1900px;
+  height: 100vh;
   padding-bottom: 90px;
 }
 
@@ -608,10 +608,37 @@
   font-weight: 500;
 }
 
+
+  
+
 .main-contact .main_card .card-contact:hover svg,
 .card-contact h1 {
   color: white;
+  animation: bell-animation 650ms ease-out 0s 1 normal both;
 }
+
+@keyframes bell-animation {
+  20% {
+    transform: rotate(15deg);
+  }
+
+  40% {
+    transform: rotate(-15deg);
+    scale: 1.1;
+  }
+  60% {
+    transform: rotate(10deg);
+    scale: 1.1;
+  }
+  80% {
+    transform: rotate(-10deg);
+  }
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 
 .main-contact .main_card .card-contact:hover h1 {
   color: white;
@@ -707,6 +734,45 @@ textarea:focus {
   outline: 1px solid #099fe4;
 }
 
+.footer{
+  font-family: "Montserrat", sans-serif;
+  z-index: 99;
+  font-weight: 500;
+  position: absolute;
+  text-align: center;
+  justify-content: center;
+  width: 100vw;
+  color: white;
+  margin-top: 200px;
+}
+
+footer img{
+  margin-bottom: -10px;
+  height: 250px;
+    width: 100vw;
+}
+
+.scroll-top{
+  font-family: "Montserrat", sans-serif;
+  z-index: 100;  
+  cursor: pointer;
+  background-color: #000;
+  color: #fff;
+  border-radius: 5px;
+  border-radius: 1px solid #fff;
+  transition: all 0.5s ease 0s;
+  position: fixed;
+  bottom: 30px;
+  font-size: 13px;
+  right: 20px;
+  padding: 8px 12px;
+}
+
+.scroll-top:hover{
+  transform: scale(1.1);
+  background-color: #01a9f4;
+
+}
 /* Responsive */
 
 @media screen and (max-width: 956px) {
@@ -833,6 +899,10 @@ textarea:focus {
   .main-project .card-project .btn {
     font-size: 15px;
     padding: 7px 20px;
+  }
+
+  footer .footer{
+    font-size: 12px;
   }
 }
 
