--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 }
 
 .loader {
-  background: #099fe4 url(/Assets/loader.gif) no-repeat center center;
+  background: #67aaf6 url(/Assets/loader2.gif) no-repeat center center;
   width: 100%;
   height: 100vh;
   position: fixed;
   z-index: 99;
-  transform: scale(1.3);
+  transform: scale(1.1);
   transition: opacity 2s, visibility 1s;
 }
 
