--- a/style.css
+++ b/style.css
@@ -4,7 +4,60 @@
   scroll-behavior: smooth;
 }
 
+/* .loading  {
+  position: absolute;
+  z-index: 150;
+  width: 100vw;
+  background-color: #67aaf6 ;
+  height: 100vh;
+} */
+
+/* HTML: <div class="loader"></div> */
 .loader {
+  width: 100vw;
+  z-index: 999;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  aspect-ratio: 1;
+  padding: 10px;
+  box-sizing: border-box;
+  display: grid;
+  background: #01a9f4;
+  filter: blur(10) contrast(20) hue-rotate(30deg);
+  
+  /* mix-blend-mode: darken; */
+}
+.loader:before,
+.loader:after{ 
+  
+  content: "";
+  grid-area: 1/1; 
+  border-radius: 8px;
+  width: 55px;
+  height: 55px;
+  background: #fff;
+  animation: l7 2s infinite;
+  
+}
+.loader:after{ 
+  animation-delay: -1s;
+  
+}
+@keyframes l7{
+  0%   {transform: translate(   0,0)}
+  25%  {transform: translate(100%,0)}
+  50%  {transform: translate(100%,100%)}
+  75%  {transform: translate(   0,100%)}
+  100% {transform: translate(   0,0)}
+}
+
+.loader--hidden {
+  opacity: 0;
+  visibility: hidden;
+} 
+/* .loader {
   background: #67aaf6 url(/Assets/loader2.gif) no-repeat center center;
   width: 100%;
   height: 100vh;
@@ -17,7 +70,7 @@
 .loader--hidden {
   opacity: 0;
   visibility: hidden;
-}
+} */
 
 .icons {
   position: absolute;
@@ -587,8 +640,8 @@
   margin: 50px 0;
 }
 
-.main-contact .main_card a{
-text-decoration: none;
+.main-contact .main_card a {
+  text-decoration: none;
 }
 
 .main-contact .main_card .card-contact {
@@ -611,9 +664,6 @@ text-decoration: none;
   color: #8a8fa3;
   font-weight: 500;
 }
-
-
-  
 
 .main-contact .main_card .card-contact:hover svg,
 .card-contact h1 {
@@ -642,7 +692,6 @@ text-decoration: none;
     transform: rotate(0deg);
   }
 }
-
 
 .main-contact .main_card .card-contact:hover h1 {
   color: white;
@@ -725,7 +774,6 @@ text-decoration: none;
   height: auto;
 }
 
-
 input:focus {
   border: none;
   box-shadow: 1px 1px 12px #099fe4;
@@ -738,7 +786,7 @@ textarea:focus {
   outline: 1px solid #099fe4;
 }
 
-.footer{
+.footer {
   font-family: "Montserrat", sans-serif;
   z-index: 99;
   font-weight: 500;
@@ -750,15 +798,15 @@ textarea:focus {
   margin-top: 200px;
 }
 
-footer img{
+footer img {
   margin-bottom: -10px;
   height: 250px;
-    width: 100vw;
+  width: 100vw;
 }
 
-.scroll-top{
+.scroll-top {
   font-family: "Montserrat", sans-serif;
-  z-index: 10;  
+  z-index: 10;
   cursor: pointer;
   background-color: #000;
   color: #fff;
@@ -772,10 +820,9 @@ footer img{
   padding: 8px 12px;
 }
 
-.scroll-top:hover{
+.scroll-top:hover {
   transform: scale(1.1);
   background-color: #01a9f4;
-
 }
 /* Responsive */
 
@@ -835,8 +882,7 @@ footer img{
 }
 
 @media screen and (max-width: 450px) {
-
-  .main-about .text p{
+  .main-about .text p {
     font-size: 14px;
     letter-spacing: 1px;
     line-height: 25px;
@@ -912,7 +958,7 @@ footer img{
     padding: 7px 20px;
   }
 
-  footer .footer{
+  footer .footer {
     font-size: 12px;
   }
 }
