--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@
 
 }
 .jumbotron .kanan .blob{
-  background-image: url('/Assets/rasya.png');
+  /* background-image: url('/Assets/rasya.png'); */
   background-repeat: no-repeat;
   background-size:460px;
   height: 100%;
@@ -293,8 +293,10 @@
 
 .jumbotron .kanan img{
   /* -webkit-mask-image: url('/Assets/rasya.png'); */
-  transform: rotate(10deg);
+  /* transform: rotate(10deg); */
   margin-left: 5px;
+  width: 550px;
+  height: 60%;
   align-items: center;
   display: flex;
 }
@@ -847,14 +849,28 @@ footer img {
 
 @media screen and (max-width: 956px) {
 
-
-
   .jumbotron .kiri {
     height: auto;
     margin-top: -50px;
     text-align: center;
   }
 
+  .jumbotron .kanan{
+      margin-bottom: 50px;
+  }
+
+  .jumbotron .kanan .blob{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .jumbotron .kanan img{
+    width: 320px;
+
+  }
+
+ 
   .jumbotron {
     height: fit-content;
     align-items: center;
